<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Look at my GUI!</string>
    <string name="ButtonText">CLICK HERE</string>
    <string name="CheckText">Check this out!</string>
    <string name="SwitchText">Switch on / off</string>
    <string name="EditTextHint">Type here</string>
    <string name="Toast">Here is more information</string>
    <string name="snackOn">The switch is now on</string>
    <string name="snackOff">The switch is now off</string>

    <string name="lab2">Lab2 GUI</string>
</resources>