<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="230dp"
        android:layout_height="55dp"
        android:text="@string/hello_message"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="97dp"></TextView>

    <Button

        android:layout_width="154dp"
        android:layout_height="56dp"
        android:text="@string/ButtonText"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="391dp"></Button>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="214dp"
        android:layout_height="121dp"
        app:srcCompat="@drawable/flag"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="191dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="165dp"
        android:layout_height="30dp"
        android:text="@string/SwitchText"
        tools:layout_editor_absoluteX="204dp"
        tools:layout_editor_absoluteY="399dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="352dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/EditTextHint"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="548dp" />


</androidx.constraintlayout.widget.ConstraintLayout>