<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/mainLayout"
    >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_message"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.005" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
    <Button
        android:id="@+id/button2"
        android:layout_width="215dp"
        android:layout_height="59dp"
        android:text="@string/ButtonText"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="55dp" />


    <CheckBox
    android:id="@+id/checkBox"
    android:layout_width="175dp"
    android:layout_height="wrap_content"
    android:text="@string/CheckText"
    tools:layout_editor_absoluteX="220dp"
    tools:layout_editor_absoluteY="66dp" />
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="214dp"
        android:layout_height="121dp"
        app:srcCompat="@drawable/flag"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="121dp" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="165dp"
            android:layout_height="30dp"
            android:text="@string/SwitchText"
            tools:layout_editor_absoluteX="220dp"
            tools:layout_editor_absoluteY="136dp" />
    </LinearLayout>
    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/EditTextHint"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="254dp" />


</LinearLayout>